[package]
name = "thiserror-context"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/tmyers273/error-context"
license = "MIT OR Apache-2.0"
keywords = ["thiserror", "anyhow", "error", "error-context", "context"]
categories = []
publish = true
description = "A wrapper around thiserror, giving you the ability to add context"

[dev-dependencies]
anyhow = "1.0.86"
thiserror = "1.0.61"
sqlx = "0.7.4"